Prevent editor toolbar to overlap sulu header (#4844)
* Limit ck-editor's max-height and move sticky-toolbar below SULU header

* Disable sticky feature completely for ck-editors toolbar.

* exhaust the maximum possible height of the editor

* Sort imports correctly

* zero height for sticky-header-placeholder after disabling sticky header.

* Fix code style

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/containers/CKEditor5/ckeditor5.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/containers/CKEditor5/ckeditor5.scss
@@ -1,4 +1,8 @@
 @import '../../containers/Application/colors.scss';
+@import '../../containers/Application/variables.scss';
+@import '../../components/Snackbar/snackbar.scss';
+@import '../../components/Tabs/variables.scss';
+@import '../../components/Toolbar/variables.scss';
 
 $textEditorFontSize: 12px;
 $textEditorButtonMinSize: 20px;
@@ -79,6 +83,17 @@ $textEditorUnpublishedLinkColor: $gold;
         .ck.ck-heading-dropdown .ck.ck-dropdown__button {
             border: 1px solid $textEditorDarkBorderColor;
         }
+
+        .ck.ck-sticky-panel {
+            .ck.ck-sticky-panel__content_sticky {
+                position: static;
+            }
+
+            .ck.ck-sticky-panel__placeholder {
+                max-height: 0;
+                overflow: hidden;
+            }
+        }
     }
 
     .ck.ck-editor {
@@ -92,6 +107,7 @@ $textEditorUnpublishedLinkColor: $gold;
             border-color: $textEditorBackgroundColor !important;
             line-height: 20px;
             min-height: 100px;
+            max-height: calc(100vh - $toolbarHeight - $snackbarHeight - $tabMenuHeight - $viewPadding - 8px);
         }
 
         .ck-widget.table {
